[gd_scene load_steps=2 format=2]

[ext_resource path="res://codes/Main Menu.gd" type="Script" id=1]

[node name="Main Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -179.0
margin_top = -34.0
margin_right = 179.0
margin_bottom = 34.0

[node name="Start" type="Button" parent="VBoxContainer"]
margin_right = 358.0
margin_bottom = 20.0
text = "Start"

[node name="Resume" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 358.0
margin_bottom = 44.0
text = "Resume"

[node name="Exit" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 358.0
margin_bottom = 68.0
text = "Exit"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
